fix alignment of sermon-section of homepage

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -43,7 +43,7 @@
 	}
 
 	.sermon-section {
-		display: flex;
+		display: grid;
 		align-items: center;
 		background: #ccceff;
 		min-height: 20vh;
@@ -66,10 +66,10 @@
 			}
 		}
 
-		@media screen and (max-width: 900px) {
+		@media screen and (max-width: $mobile) {
 			.sermon-text {
-				display: flex;
 				flex-direction: column;
+				align-items: flex-start;
 				gap: 1.5rem;
 
 				.sermon-link {
@@ -349,7 +349,7 @@
 					.btn {
 						margin-top: 2rem;
 						text-align: center;
-						padding: 1rem 2rem;
+						padding: 0.7rem 2rem;
 						background: #f66800;
 						border-radius: 10px;
 						font-size: 16px;
@@ -891,7 +891,7 @@
 		.placeholder {
 			height: 52rem;
 			@media screen and (max-width: 580px) {
-				height: 68rem;
+				height: 66rem;
 			}
 		}
 	}
